--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,147 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: lightgray;
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+}
+
+header {
+  grid-column: span 4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  padding: 0px 16px 0px 16px;
+  color: white;
+  background-color: #101010
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+/* Hamburger menu only visible in mobile view */
+.hamburger {
+  display: flex;
+  width: 40px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger div {
+  width: 40px;
+  height: 5px;
+  background: #fff;
+}
+
+.logo {
+  width: 60px;
+  height: 60px;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+li {
+  margin-left: 16px;
+}
+
+.big-news {
+  grid-column: span 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
+.big-article {
+  padding: 16px 0px 16px 0px;
+}
+
+.big-image {
+  width: 100%;
+}
+
+h1 {
+  font-size: 48px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 32px;
+  left: 32px;
+}
+
+.news-cards {
+  grid-column: span 4;
+  gap: 10px;
+  display: flex;
+}
+
+.news-card {
+  display: flex;
+  flex-direction: column;
+  background: whitesmoke;
+  width: 250px;
+  padding: 16px;
+}
+
+.news-card img {
+  width: 100%;
+  margin-bottom: 8px;
+}
+
+h2 {
+  font-size: 24px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+p {
+  margin: 8px 0px;
+}
+
+footer {
+  grid-column: span 4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  ;
+  padding: 16px;
+  color: white;
+  background-color: #101010;
+}
+
+@media (min-width: 768px) {
+  .hamburger {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-nav {
+    display: none;
+  }
 }
